log
Thu Apr  7 21:10:00 -04 2022: 
 tests:  0|6
total_score: 0/70
c03180f
Thu Apr  7 21:17:57 -04 2022: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
In file included from test.c:4:
./hashmap.c:57:5: error: variable 'mapa' is uninitialized when used here [-Werror,-Wuninitialized]
    mapa->buckets = NULL;
    ^~~~
./hashmap.c:56:18: note: initialize the variable 'mapa' to silence this warning
    HashMap *mapa;
                 ^
                  = NULL
1 error generated.
Compilation failed
5eed410
